--- a/Segmenting and Clustering Neighborhoods in Toronto #1.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto #1.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## All Postal codes are already in te correct format in the Wikipedia page"
+    "## All Postal codes are already in the correct format in the Wikipedia page"
    ]
   },
   {
